--- a/index.html
+++ b/index.html
@@ -21,28 +21,34 @@
                     </tr>
                     <tr>
                         <td class="nalaColor"><img src="images/nala.jpg" alt="nala"></td>
-                        <td><input type="text" name="weight" id="weight"></td>
+                        <td><input type="text" name="weight" id="nalaWeight"></td>
+                        <td><input type="checkbox" name="play"></td>
+                        <td><input type="checkbox" name="puke"></td>
+                        <td>
+                            <button onclick="updateDisplay()" class="display">Add</button>
+                            <div id="errorDisplay"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="kikiColor"><img src="images/kiki.jpg" alt="kiki"></td>
+                        <td><input type="text" name="weight" id="kikiWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
                         <td><button onclick="updateDisplay()" class="display">Add</button></td>
                     </tr>
                     <tr>
-                        <td class="kikiColor"><img src="images/kiki.jpg" alt="kiki"></td>
-                        <td><input type="text" name="weight"></td>
-                        <td><input type="checkbox" name="play"></td>
-                        <td><input type="checkbox" name="puke"></td>
-                    </tr>
-                    <tr>
                         <td class="pekoeColor"><img src="images/pekoe.jpg" alt="pekoe"></td>
-                        <td><input type="text" name="weight"></td>
+                        <td><input type="text" name="kikiWeight" id="pekoeWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
+                        <td><button onclick="updateDisplay()" class="display">Add</button></td>
                     </tr>       
                     <tr>
                         <td class="rogueColor"><img src="images/rogue.jpg" alt="pekoe"></td>
-                        <td><input type="text" name="weight"></td>
+                        <td><input type="text" name="weight" id="rogueWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
+                        <td><button onclick="updateDisplay()" class="display">Add</button></td>
                     </tr>         
                 </table>
                 
@@ -51,7 +57,19 @@
         <hr>
         <div id="data">
             <h3>Data</h3>
-            <div id="nalaWeight"></div>
+            <hr>
+            <h4>Nala</h4>
+            <div id="nalaWeightDisplay"></div>
+            <hr>
+            <h4>Kiki</h4>
+            <div id="kikiWeightDisplay"></div>
+            <hr>
+            <h4>Pekoe</h4>
+            <div id="pekoeWeightDisplay"></div>
+            <hr>
+            <h4>Rogue</h4>
+            <div id="rogueWeightDisplay"></div>
+
         </div>
         <script src="scripts.js"></script>
     </body>
