display from localStorage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
                         <td>
-                            <button onclick="updateDisplay()" class="display">Add</button>
+                            <button onclick="save()" class="display">Add</button>
                         </td>
                     </tr>
                     <tr>
@@ -33,21 +33,21 @@
                         <td><input type="text" name="weight" id="kikiWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
-                        <td><button onclick="updateDisplay()" class="display">Add</button></td>
+                        <td><button onclick="save()" class="display">Add</button></td>
                     </tr>
                     <tr>
                         <td class="pekoeColor"><img src="images/pekoe.jpg" alt="pekoe"></td>
                         <td><input type="text" name="kikiWeight" id="pekoeWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
-                        <td><button onclick="updateDisplay()" class="display">Add</button></td>
+                        <td><button onclick="save()" class="display">Add</button></td>
                     </tr>       
                     <tr>
                         <td class="rogueColor"><img src="images/rogue.jpg" alt="pekoe"></td>
                         <td><input type="text" name="weight" id="rogueWeight"></td>
                         <td><input type="checkbox" name="play"></td>
                         <td><input type="checkbox" name="puke"></td>
-                        <td><button onclick="updateDisplay()" class="display">Add</button></td>
+                        <td><button onclick="save()" class="display">Add</button></td>
                     </tr>         
                 </table>
                 
